<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.com.boha.monitor.library.ClaimAndInvoicePagerActivity">
    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_claims"
        android:title="@string/contractor_claims"
        android:icon="@drawable/default_document"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_invoices"
        android:title="@string/invoices"
        android:icon="@drawable/cal2_32"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/help_me"
        android:icon="@drawable/ic_action_help"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
