<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:padding="8dp"
    android:visibility="visible"
    android:id="@+id/ED_PSN_layout0"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/ED_PSN_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/ED_PSN_space"
            android:layout_width="match_parent"
            android:background="@color/beige_pale"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ED_PSN_personType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Title3TextStyleGrey"
                android:layout_marginLeft="5dp"
                android:text="Staff or Beneficiary" />

            <ImageView
                android:id="@+id/ED_PSN_imgDelete"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:src="@android:drawable/ic_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <EditText
            android:id="@+id/ED_PSN_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/ED_PSN_space"
            android:inputType="textCapWords"
            android:layout_marginLeft="5dp"
            android:hint="@string/firstname" />

        <EditText
            android:id="@+id/ED_PSN_lastName"
            android:layout_width="match_parent"
            android:layout_below="@id/ED_PSN_firstName"
            android:inputType="textCapWords"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/lastname" />

        <EditText
            android:id="@+id/ED_PSN_cellphone"
            android:layout_width="match_parent"
            android:layout_below="@id/ED_PSN_lastName"
            android:inputType="phone"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="@string/cellphone" />


        <EditText
            android:id="@+id/ED_PSN_email"
            android:layout_width="match_parent"
            android:layout_below="@id/ED_PSN_cellphone"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/ED_PSN_idNumber"
            android:layout_width="match_parent"
            android:layout_below="@id/ED_PSN_email"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/id_number" />

        <CheckBox
            android:id="@+id/ED_PSN_chkInvite"
            android:layout_width="match_parent"
            android:layout_below="@id/ED_PSN_idNumber"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="@string/subject"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/ED_PSN_spinner"
            android:layout_width="match_parent"
            android:layout_below="@id/ED_PSN_chkInvite"
            android:background="@color/blue_pale"
            android:orientation="horizontal"
            android:layout_height="wrap_content" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@id/ED_PSN_spinner"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ED_PSN_btnCancel"
                style="@style/ButtonCancelSmall"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/ED_PSN_btnSave"
                style="@style/ButtonRed"
                android:layout_marginTop="8dp"
                android:layout_below="@id/ED_PSN_btnCancel"
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <ProgressBar
            android:id="@+id/ED_PSN_progress"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</ScrollView>