<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/TE_imgDelete"
        android:src="@android:drawable/ic_delete"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/TE_editTaskName"
        android:layout_below="@id/TE_imgDelete"
        android:hint="@string/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/TE_numLayout"
        android:layout_marginTop="16dp"
        android:layout_below="@id/TE_editTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <NumberPicker
            android:id="@+id/TE_numberPicker"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/TE_label"
            style="@style/Title3TextStyleGrey"
            android:text="@string/task_seq_no"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/TE_numberPicker"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/TE_numLayout"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/ButtonCancel"
            android:id="@+id/TE_btnCancel"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            style="@style/ButtonRed"
            android:id="@+id/TE_btnSave"
            android:text="@string/save"
            android:layout_below="@id/TE_btnCancel"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </RelativeLayout>
    <ProgressBar
        android:id="@+id/TE_progress"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>